<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="12dp">

                <ImageView
                    android:id="@+id/edit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:src="@drawable/ic_mode_edit_black_24dp" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/edit_icon"
                    android:background="@color/transparent"
                    android:hint="@string/post_checkin_description_hint"
                    android:imeOptions="actionDone" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <RelativeLayout
                android:id="@+id/btn_audio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/checkin_activity_btn"
                android:paddingBottom="12dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/mic_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:src="@drawable/ic_mic_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/mic_icon"
                    android:text="@string/post_checkin_audio_hint"
                    android:textSize="18sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/recode_audio_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="36dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_mic_black_48dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingTop="20dp">

                            <ProgressBar
                                android:id="@+id/progressbar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:max="100" />


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:gravity="bottom"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_progress_current"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="0:00"
                                    android:textColor="@color/secondary_text"
                                    android:textSize="21sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text=" / "
                                    android:textColor="@color/secondary_text"
                                    android:textSize="16sp" />

                                <TextView
                                    android:id="@+id/tv_progress_duration"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="10:00"
                                    android:textColor="@color/secondary_text"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/btn_cancel_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_close_black_24dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_redo"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:drawableLeft="@drawable/ic_redo_black_24dp"
                        android:text="REDO"
                        android:textColor="@color/primary_text"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_play"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:drawableLeft="@drawable/ic_play_arrow_black_24dp"
                        android:text="PLAY "
                        android:textColor="@color/primary_text"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_pause"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:drawableLeft="@drawable/ic_pause_black_24dp"
                        android:text="PAUSE"
                        android:textColor="@color/primary_text"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_stop"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:drawableLeft="@drawable/ic_stop_red_a700_24dp"
                        android:text="STOP"
                        android:textColor="@color/primary_text"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_record"
                        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:drawableLeft="@drawable/ic_fiber_manual_record_red_a700_24dp"
                        android:text="RECORD"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider" />

            <RelativeLayout
                android:id="@+id/btn_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/checkin_activity_btn"
                android:paddingBottom="12dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="12dp">

                <ImageView
                    android:id="@+id/photo_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:src="@drawable/ic_insert_photo_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/photo_icon"
                    android:text="@string/post_checkin_photo_hint"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/picked_photo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <nctu.cs.cgv.itour.custom.SquareImageView
                    android:id="@+id/picked_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true" />

                <ImageView
                    android:id="@+id/btn_cancel_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/circle_btn_white"
                    android:src="@drawable/ic_close_black_24dp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>